--- a/dns/src/github.com/johnstarich/go/dns/internal/cmd/dns-test/main.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/internal/cmd/dns-test/main.go.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.19.13";</script>
+<script>var goVersion = "go1.25.0";</script>
 <script src="/go/dns/lib/godoc/godocs.js" defer=""></script>
 
 </head>
@@ -59,9 +59,9 @@
 <span id="L2" class="ln">     2  </span>package main
 <span id="L3" class="ln">     3  </span>
 <span id="L4" class="ln">     4  </span>import (
-<span id="L5" class="ln">     5  </span>	&#34;flag&#34;
-<span id="L6" class="ln">     6  </span>	&#34;fmt&#34;
-<span id="L7" class="ln">     7  </span>	&#34;net&#34;
+<span id="L5" class="ln">     5  </span>	&#34;context&#34;
+<span id="L6" class="ln">     6  </span>	&#34;flag&#34;
+<span id="L7" class="ln">     7  </span>	&#34;fmt&#34;
 <span id="L8" class="ln">     8  </span>
 <span id="L9" class="ln">     9  </span>	&#34;github.com/johnstarich/go/dns&#34;
 <span id="L10" class="ln">    10  </span>	&#34;go.uber.org/zap&#34;
@@ -75,11 +75,11 @@
 <span id="L18" class="ln">    18  </span>	}
 <span id="L19" class="ln">    19  </span>	fmt.Println(&#34;Looking up&#34;, hostname)
 <span id="L20" class="ln">    20  </span>
-<span id="L21" class="ln">    21  </span>	net.DefaultResolver = dns.NewWithConfig(dns.Config{
+<span id="L21" class="ln">    21  </span>	resolver := dns.NewWithConfig(dns.Config{
 <span id="L22" class="ln">    22  </span>		Logger: zap.NewExample(),
 <span id="L23" class="ln">    23  </span>	})
 <span id="L24" class="ln">    24  </span>
-<span id="L25" class="ln">    25  </span>	addrs, err := net.LookupIP(hostname)
+<span id="L25" class="ln">    25  </span>	addrs, err := resolver.LookupIPAddr(context.Background(), hostname)
 <span id="L26" class="ln">    26  </span>	if err != nil {
 <span id="L27" class="ln">    27  </span>		panic(err)
 <span id="L28" class="ln">    28  </span>	}
@@ -89,7 +89,7 @@
 </pre><p></p>
 
 <div id="footer">
-Build version go1.19.13.<br/>
+Build version go1.25.0.<br/>
 </div>
 
 </div><!-- .container -->
