--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/watch/main.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/watch/main.go.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.19.13";</script>
+<script>var goVersion = "go1.25.0";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 
 </head>
@@ -214,7 +214,7 @@
 <span id="L157" class="ln">   157  </span>	}
 <span id="L158" class="ln">   158  </span>	name = strings.TrimPrefix(name, h.base)
 <span id="L159" class="ln">   159  </span>	name = filepath.FromSlash(name)
-<span id="L160" class="ln">   160  </span>	info, err := h.Filesystem.Stat(name)
+<span id="L160" class="ln">   160  </span>	info, err := h.Stat(name)
 <span id="L161" class="ln">   161  </span>	if err != nil {
 <span id="L162" class="ln">   162  </span>		return nil, err
 <span id="L163" class="ln">   163  </span>	}
@@ -251,7 +251,7 @@
 </pre><p></p>
 
 <div id="footer">
-Build version go1.19.13.<br/>
+Build version go1.25.0.<br/>
 </div>
 
 </div><!-- .container -->
