--- a/gopages/src/github.com/johnstarich/go/gopages/internal/safememfs/memfs.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/safememfs/memfs.go.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.19.13";</script>
+<script>var goVersion = "go1.25.0";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 
 </head>
@@ -76,7 +76,7 @@
 <span id="L19" class="ln">    19  </span>
 <span id="L20" class="ln">    20  </span><span class="comment">// Open reimplements memfs.FS.Open() to fix bad behavior on opening directories</span>
 <span id="L21" class="ln">    21  </span>func (s *SafeOpener) Open(name string) (billy.File, error) {
-<span id="L22" class="ln">    22  </span>	info, err := s.Filesystem.Stat(name)
+<span id="L22" class="ln">    22  </span>	info, err := s.Stat(name)
 <span id="L23" class="ln">    23  </span>	if err != nil {
 <span id="L24" class="ln">    24  </span>		return nil, err
 <span id="L25" class="ln">    25  </span>	}
@@ -94,7 +94,7 @@
 </pre><p></p>
 
 <div id="footer">
-Build version go1.19.13.<br/>
+Build version go1.25.0.<br/>
 </div>
 
 </div><!-- .container -->
